   Every callbacks should be rewritten to that interface at some point.
   
 Surf
 * Reorganizing and cleaning the internals all around the place.

 SMPI
 * BC breaks:
   - The option smpi/async_small_thres was renamed to smpi/async_small_thresh
     as we attempt to unify our naming schemes -> smpi/send_is_detached_thresh

 XBT
 * Kill the setset datacontainer: it's unused since a while.
 
 JAVA:
 * Remove the ability to write internal plugins in Java. 
   It may be reintroduced once the ongoing cleanup is done.

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.12) stable; urgency=low

 The Facelift Release.

 Build System
  * Require g++ v4.7 at least to not speak prehistorical C++.
  * Require Boost 1.48 (for signal2 component).
  * Java must be version 7 at least when activated.
  * Builds on Windows again (including Java bindings).
  * Tracing is now always enabled (no way to turn it out)
  * Remove GTNetS. It was not working anyway.
  * Various cleanups in the cmake scripts.
  * Move headers around to sort them out on installed systems:
    - instr/instr.h  -> simgrid/instr.h
    - instr/jedule/* -> simgrid/jedule
    - simdag/datatypes.h was removed
    - simdag/simdag.h -> simgrid/simdag.h
    - msg/datatypes.h was removed
    - msg/msg.h -> simgrid/msg.h

 cMSG:
 * Interface improvement:
   - Rename MSG_host_is_avail(h) to MSG_host_is_on(h)
   - Sanitize the interface in MSG_task_ module:
     - Merge two functions that were close enough but misleading:
       set_compute_duration(t)      -> set_flops_amount(t)
       get_remaining_computation(t) -> get_flops_amount(t)
     - set_data_size(t) -> set_bytes_amount(t)
       get_data_size(t) -> get_bytes_amount(t)
   - Massive cleanups in the functions related to the energy
     - MSG_host_get_pstate_number() -> MSG_host_get_nb_pstates()
   - New: MSG_host_get_pstate()
 * New example:
   - msg/energy/onoff: switching hosts on and off
 jMSG:
 * Interface improvement: