@@ -26,7 +26,6 @@
 #include <xbt/set.h>
 #include <xbt/swag.h>
 #include <xbt/heap.h>
-#include <xbt/queue.h>
 #include <xbt/parmap.h>
 
 #include <xbt/peer.h>
